--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,13 @@
             <version>1.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.0.0-M4</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
