Changes to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
 *.class
 *.log
-.idea/vcs.xml
+.idea/
+classes/
 logs/
-metastore_db/tmp/
-src/main/scala/common/config/
-src/test/
+metastore_db/
+spark-warehouse/
+target/
+derby.log
 MLScala.iml
+src/main/resources/META-INF/
+src/main/scala/common/config/
+src/main/scala/del.sc
+src/test/
