--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>3.2.2</version>
+                <version>4.9.5</version>
                 <executions>
                     <execution>
                         <goals>
@@ -34,6 +34,11 @@
                 </executions>
                 <!-- rest of configuration -->
             </plugin>
+        <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.2</version>
+            </plugin>
         </plugins>
     </build>
 
@@ -42,7 +47,7 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
-            <version>2.1.1</version>
+            <version>2.4.8</version>
             <scope>provided</scope>
         </dependency>
 
@@ -50,7 +55,7 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.11</artifactId>
-            <version>2.1.1</version>
+            <version>2.4.8</version>
             <scope>provided</scope>
         </dependency>
 
@@ -58,7 +63,7 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming_2.11</artifactId>
-            <version>2.1.1</version>
+            <version>2.4.8</version>
             <scope>provided</scope>
         </dependency>
 
@@ -66,7 +71,7 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-mllib_2.11</artifactId>
-            <version>2.1.1</version>
+            <version>2.4.8</version>
             <scope>provided</scope>
         </dependency>
 
@@ -74,7 +79,7 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-hive_2.11</artifactId>
-            <version>2.1.1</version>
+            <version>2.4.8</version>
             <scope>provided</scope>
         </dependency>
 
@@ -82,28 +87,21 @@
         <dependency>
             <groupId>org.mongodb.spark</groupId>
             <artifactId>mongo-spark-connector_2.11</artifactId>
-            <version>2.0.0</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/com.stratio.datasource/spark-mongodb_2.11 -->
-        <dependency>
-            <groupId>com.stratio.datasource</groupId>
-            <artifactId>spark-mongodb_2.11</artifactId>
-            <version>0.12.0</version>
+            <version>2.4.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.github.haifengl/smile-core -->
         <dependency>
             <groupId>com.github.haifengl</groupId>
             <artifactId>smile-core</artifactId>
-            <version>1.3.1</version>
+            <version>4.4.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.github.haifengl/smile-plot -->
         <dependency>
             <groupId>com.github.haifengl</groupId>
             <artifactId>smile-plot</artifactId>
-            <version>1.3.1</version>
+            <version>4.4.0</version>
         </dependency>
 
         <dependency>
@@ -116,13 +114,13 @@
         <dependency>
             <groupId>com.soundcloud</groupId>
             <artifactId>cosine-lsh-join-spark_2.11</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.6</version>
         </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.0.0-M4</version>
+            <version>5.13.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -130,7 +128,7 @@
         <dependency>
             <groupId>de.lmu.ifi.dbs.elki</groupId>
             <artifactId>elki</artifactId>
-            <version>0.7.1</version>
+            <version>0.7.5</version>
         </dependency>
 
 
