Improving code and UTs using gemini

--- a/src/main/resources/Config.properties
+++ b/src/main/resources/Config.properties
@@ -1,8 +1,8 @@
 mongo.db.host=localhost
 mongo.db.port=27017
 mongo.db.name=cuckoo
-mongo.collection.name=clusteredMalware
-mongo.username=admin
-mongo.password=goodDevelopers@123
-mongo.authdb=admin
+mongo.collection.name=cluster2db
+mongo.username=
+mongo.password=
 mongo.isauthenabled=false
+mongo.authdb=admin
